Fixes browse node tool in 2D mode. Makes the active tool contrast better with the toolbar

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -74,8 +74,18 @@ body {
 }
 #toolbar {
   flex:0 0 auto;
-  background-color:rgba(30,30,30, 1);
+  border-color:rgba(70,70,70,1);
+  background-color:rgba(45,45,45, 1);
   border-bottom-width:5px;
+}
+.Tool {
+}
+.Tool[data-active-tool="true"] {
+  background-color:rgb(15,15,15);
+  /* background-color:rgb(220,220,220); */
+}
+.Tool[data-active-tool="true"] > * {
+  /* color:black; */
 }
 #graphOverlayContainer {
   flex-grow:1;
